<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity">


    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="网络设定"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="服务器IP："
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_server_ip"
            android:hint="@string/server_ip"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="WIFI名称："
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_wifi_name"
            android:hint="@string/wifi_name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="WIFI密码："
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_wifi_pwd"
            android:hint="@string/wifi_pwd"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="确认设置"
        android:id="@+id/bt_confrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>